--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Craft Beer Nation - Craft Beer HTML Template</title>
+<title>Invisible Man Brewing</title>
 <link rel="icon" type="image/png" href="images/favicon.png.html" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/fakeLoader.css" rel="stylesheet">
@@ -37,25 +37,30 @@
 <li><a href="#" class="fa fa-twitter-square"></a></li>
 </ul>
 </div>
-<div class="col-sm-8">
+
+<!-- <div class="col-sm-8">
+
 <div class="finder">
 <a href="#">
 <span class="fa fa-map-marker"></span> Find our beer
 </a>
 </div>
+
 <div class="cart">
 <a href="cart.html">
 <span class="fa fa-shopping-cart"></span> Empty
 </a>
 </div>
-</div>
+
+</div> -->
+
 </div>
 </div>
 </div>
 <div class="container">
 <div class="navbar-header">
-<a href="index.html" class="logo" title="Craft beer landing page">
-<img src="images/logo.png" alt="Craft Beer HTML Template">
+<a href="index.html" class="logo" title="Invisible Man Brewing">
+<img src="images/logo.png" alt="Invisible Man Brewing">
 </a>
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 <span class="sr-only">Toggle navigation</span>
@@ -71,7 +76,7 @@
 <a href="index.html">Home</a>
 </span>
 </li>
-<li>
+<!-- <li>
 <span>
 <a href="shop.html">Shop</a>
 </span>
@@ -85,7 +90,7 @@
 <li><a href="our-beer.html">BraveHeart</a></li>
 <li><a href="our-beer.html">The Drunk Indian</a></li>
 </ul>
-</li>
+</li> -->
 <li>
 <span>
 <a href="our-story.html">Our story</a>
@@ -96,13 +101,13 @@
 <a href="contact.html">Contact</a>
 </span>
 </li>
-<li class="dropdown">
+<!-- <li class="dropdown">
 <span>
 <a href="blog.html">Blog</a>
 </span>
 <ul class="dropdown-menu">
 <li><a href="blog-single.html">Single post</a></li>
-</ul>
+</ul> -->
 </li>
 </ul>
 </div>
@@ -123,10 +128,10 @@
 <div class="container">
 <div class="row blurb scrollme animateme" data-when="exit" data-from="0" data-to="1" data-opacity="0" data-translatey="100">
 <div class="col-md-10 col-md-offset-1">
-<h1>Over one hundred flavours of</h1>
-<h2>Specially <br />crafted beer</h2>
-<a href="#" class="btn btn-default">
-<span>Explore</span>
+<h1>The finest Craft Beer</h1>
+<h2>Delivered <br /> to you</h2>
+<a href="https://www.toasttab.com/invisible-man-brewing/v3" target="_blank" class="btn btn-default">
+<span>Order Now</span>
 </a>
 </div>
 </div>
@@ -137,10 +142,10 @@
 <div class="container">
 <div class="row blurb scrollme animateme" data-when="exit" data-from="0" data-to="1" data-opacity="0" data-translatey="100">
 <div class="col-md-10 col-md-offset-1">
-<h1>We use only the finest ingredients to create the</h1>
+<h1>We use the finest ingredients to create</h1>
 <h2>The perfect <br />craft beer</h2>
-<a href="#" class="btn btn-default">
-<span>Explore</span>
+<a href="https://www.toasttab.com/invisible-man-brewing/v3" target="_blank" class="btn btn-default">
+<span>Order Now</span>
 </a>
 </div>
 </div>
@@ -151,10 +156,10 @@
 <div class="container">
 <div class="row blurb scrollme animateme" data-when="exit" data-from="0" data-to="1" data-opacity="0" data-translatey="100">
 <div class="col-md-10 col-md-offset-1">
-<h1>The perfect template to compliment</h1>
-<h2>Your brewery</h2>
-<a href="#" class="btn btn-default">
-<span>Buy template</span>
+<h1>Stay home</h1>
+<h2>We deliver</h2>
+<a href="https://www.toasttab.com/invisible-man-brewing/v3" target="_blank" class="btn btn-default">
+<span>Order Now</span>
 </a>
 </div>
 </div>
@@ -172,7 +177,7 @@
 <h2>Master brew</h2>
 </header>
 <p>Dusting of cinnamon. Orange zest flavors become more pronounced as the beer warms, pulling through toward the finish. Man, this beer is all over the place. Quite dry in the finish, with a lingering yeasty character, touch of toasty sweetness and a bitey feel on the palate.</p>
-<a href="#" class="btn btn-default"><span>Show me more</span></a>
+<!-- <a href="#" class="btn btn-default"><span>Show me more</span></a> -->
 </section>
 </div>
 <div class="col-sm-6 matchHeight" style="background-image: url(images/block-bg-1.jpg);">
@@ -220,7 +225,7 @@
 </header>
 <p>The 12-ounce bottle pours a pitch-black, topped with a creamy tan-colored head that leaves a healthy ringed lace as it settles, with a bit of stick on the glass.</p>
 <p>A touch of hop bitterness provides some citric edge and melds with the acridness of the brew for a perceived sourness. Smoky characters emerge as the beer warms, as do subtle drops of caramel.</p>
-<a href="#" class="btn btn-default"><span>Learn more</span></a>
+<!-- <a href="#" class="btn btn-default"><span>Learn more</span></a> -->
 </section>
 </div>
 </div>
@@ -240,7 +245,7 @@
 <h2>Friends</h2>
 </header>
 <p>A blend of lambic beers brewed at 3 Fonteinen, with an addition of 30% whole fresh raspberries from the fabled Payottenland and 5% sour cherries. This unfiltered beer will enjoy a spontaneous refermentation in the bottle. No artificial colors or flavor enhancers are added. Lambic is brewed only from 60% barley malt, 40% unmalted wheat, hops and water.</p>
-<a href="#" class="btn btn-default"><span>Learn more</span></a>
+<!-- <a href="#" class="btn btn-default"><span>Learn more</span></a> -->
 </section>
 </div>
 </div>
@@ -266,7 +271,7 @@
 <h2>Beer aisle</h2>
 </header>
 <p>Smoky characters emerge as the beer warms, as do subtle drops of caramel. The overall dryness of the beer carries through to the finish, with a semi-burnt linger and bitter end.</p>
-<a href="#" class="btn btn-default"><span>Show me more</span></a>
+<a href="https://www.toasttab.com/invisible-man-brewing/v3" class="btn btn-default"><span>Menu</span></a>
 </div>
 </div>
 <div class="col-sm-6 col-sm-push-1 matchHeight">
@@ -323,7 +328,7 @@
 </header>
 <p>Brewed with licorice; a proprietary, hand-smoked malt; and almost a pound of East Kent Goldings hops per barrel.</p>
 <p>Opaque brown in color, with muddy brown edges and a cola-colored head that drops quickly to a ringed lace. Strong and dominating licorice aroma with an underlying robust molasses-ness and highly roasted malts. Thick-ish, deep blackstrap molasses character (sweet, tangy nectar), quite robust.</p>
-<p><a href="#" class="underline">Read more</a></p>
+<!-- <p><a href="#" class="underline">Read more</a></p> -->
 </div>
 </div>
 <div class="background" style="background-image: url(images/latest-post-1.jpg);"></div>
@@ -338,7 +343,7 @@
 </header>
 <p>Brewed with licorice; a proprietary, hand-smoked malt; and almost a pound of East Kent Goldings hops per barrel.</p>
 <p>Opaque brown in color, with muddy brown edges and a cola-colored head that drops quickly to a ringed lace. Strong and dominating licorice aroma with an underlying robust molasses-ness and highly roasted malts. Thick-ish, deep blackstrap molasses character (sweet, tangy nectar), quite robust.</p>
-<p><a href="#" class="underline">Read more</a></p>
+<!-- <p><a href="#" class="underline">Read more</a></p> -->
 </div>
 </div>
 <div class="background" style="background-image: url(images/latest-post-2.jpg);"></div>
@@ -389,9 +394,9 @@ Days til ready
 <h6>Useful</h6>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="shop.html">Shop</a></li>
+<!-- <li><a href="shop.html">Shop</a></li> -->
 <li><a href="our-story.html">Our story</a></li>
-<li><a href="blog.html">Blog</a></li>
+<!-- <li><a href="blog.html">Blog</a></li> -->
 <li><a href="#">Login</a></li>
 </ul>
 </div>
@@ -399,8 +404,8 @@ Days til ready
 <h6>Help</h6>
 <ul>
 <li><a href="#">Customer service</a></li>
-<li><a href="#">Find our beer</a></li>
-<li><a href="#">Recent orders</a></li>
+<!-- <li><a href="#">Find our beer</a></li>
+<li><a href="#">Recent orders</a></li> -->
 <li><a href="#">Contact</a></li>
 <li><a href="#">Terms &amp; Privacy</a></li>
 </ul>
@@ -416,9 +421,10 @@ Days til ready
 </div>
 <div class="col-sm-5 col-sm-push-1">
 <h6>Our information</h6>
-<p><i class="fa fa-map-marker"></i> 94 River Road, London, United Kingdom</p>
-<p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="a5d6c4c9c0d6e5c6d7c4c3d1c7c0c0d788cbc4d1cccacb8bc6cac8">[email&#160;protected]</a></p>
-<p><i class="fa fa-phone"></i> (0)203 123 4567</p>
+<p><i class="fa fa-map-marker"></i> 132 S. Pennsylvania Ave Greensburg, PA 15601</p>
+<p><i class="fa fa-envelope-o"></i> InvisibleManBrewing@yahoo.com</p>
+<!-- <p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="a5d6c4c9c0d6e5c6d7c4c3d1c7c0c0d788cbc4d1cccacb8bc6cac8">[email&#160;protected]</a></p> -->
+<p><i class="fa fa-phone"></i> 724-454-4600</p>
 <ul class="social">
 <li><a href="#" class="fa fa-instagram"></a></li>
 <li><a href="#" class="fa fa-facebook-square"></a></li>
@@ -427,7 +433,7 @@ Days til ready
 </div>
 </div>
 <div class="copyright">
-<p>2017 &copy; Craft Beer Nation / <a href="../../index.html">Web design by Klever media</a></p>
+<p>2020 &copy; Invisible Man Brewing / <a href="../../index.html">Digital by Justice Conder</a></p>
 </div>
 </div>
 </footer>
