--- a/our-story.html
+++ b/our-story.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Craft Beer Nation - Craft Beer HTML Template</title>
+<title>Invisible Man Brewing</title>
 <link rel="icon" type="image/png" href="images/favicon.png.html" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/fakeLoader.css" rel="stylesheet">
@@ -37,7 +37,8 @@
 <li><a href="#" class="fa fa-twitter-square"></a></li>
 </ul>
 </div>
-<div class="col-sm-8">
+
+<!-- <div class="col-sm-8">
 <div class="finder">
 <a href="#">
 <span class="fa fa-map-marker"></span> Find our beer
@@ -48,14 +49,15 @@
 <span class="fa fa-shopping-cart"></span> Empty
 </a>
 </div>
-</div>
+</div> -->
+
 </div>
 </div>
 </div>
 <div class="container">
 <div class="navbar-header">
-<a href="index.html" class="logo" title="Craft beer landing page">
-<img src="images/logo.png" alt="Craft Beer HTML Template">
+<a href="index.html" class="logo" title="Invisible Man Brewing">
+<img src="images/logo.png" alt="Invisible Man Brewing">
 </a>
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 <span class="sr-only">Toggle navigation</span>
@@ -71,7 +73,7 @@
 <a href="index.html">Home</a>
 </span>
 </li>
-<li>
+<!-- <li>
 <span>
 <a href="shop.html">Shop</a>
 </span>
@@ -85,7 +87,7 @@
 <li><a href="our-beer.html">BraveHeart</a></li>
 <li><a href="our-beer.html">The Drunk Indian</a></li>
 </ul>
-</li>
+</li> -->
 <li class="active">
 <span>
 <a href="our-story.html">Our story</a>
@@ -96,14 +98,14 @@
 <a href="contact.html">Contact</a>
 </span>
 </li>
-<li class="dropdown">
+<!-- <li class="dropdown">
 <span>
 <a href="blog.html">Blog</a>
 </span>
 <ul class="dropdown-menu">
 <li><a href="blog-single.html">Single post</a></li>
 </ul>
-</li>
+</li> -->
 </ul>
 </div>
 </div>
@@ -158,7 +160,7 @@
 <h2>Friends</h2>
 </header>
 <p>A blend of lambic beers brewed at 3 Fonteinen, with an addition of 30% whole fresh raspberries from the fabled Payottenland and 5% sour cherries. This unfiltered beer will enjoy a spontaneous refermentation in the bottle. No artificial colors or flavor enhancers are added. Lambic is brewed only from 60% barley malt, 40% unmalted wheat, hops and water.</p>
-<a href="#" class="btn btn-default"><span>Learn more</span></a>
+<!-- <a href="#" class="btn btn-default"><span>Learn more</span></a> -->
 </section>
 </div>
 </div>
@@ -297,9 +299,9 @@ Days til ready
 <h6>Useful</h6>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="shop.html">Shop</a></li>
+<!-- <li><a href="shop.html">Shop</a></li> -->
 <li><a href="our-story.html">Our story</a></li>
-<li><a href="blog.html">Blog</a></li>
+<!-- <li><a href="blog.html">Blog</a></li> -->
 <li><a href="#">Login</a></li>
 </ul>
 </div>
@@ -307,8 +309,8 @@ Days til ready
 <h6>Help</h6>
 <ul>
 <li><a href="#">Customer service</a></li>
-<li><a href="#">Find our beer</a></li>
-<li><a href="#">Recent orders</a></li>
+<!-- <li><a href="#">Find our beer</a></li>
+<li><a href="#">Recent orders</a></li> -->
 <li><a href="#">Contact</a></li>
 <li><a href="#">Terms &amp; Privacy</a></li>
 </ul>
@@ -324,9 +326,10 @@ Days til ready
 </div>
 <div class="col-sm-5 col-sm-push-1">
 <h6>Our information</h6>
-<p><i class="fa fa-map-marker"></i> 94 River Road, London, United Kingdom</p>
-<p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="dba8bab7bea89bb8a9babdafb9bebea9f6b5baafb2b4b5f5b8b4b6">[email&#160;protected]</a></p>
-<p><i class="fa fa-phone"></i> (0)203 123 4567</p>
+<p><i class="fa fa-map-marker"></i> 132 S. Pennsylvania Ave Greensburg, PA 15601</p>
+<p><i class="fa fa-envelope-o"></i> InvisibleManBrewing@yahoo.com</p>
+<!-- <p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="dba8bab7bea89bb8a9babdafb9bebea9f6b5baafb2b4b5f5b8b4b6">[email&#160;protected]</a></p> -->
+<p><i class="fa fa-phone"></i> 724-454-4600</p>
 <ul class="social">
 <li><a href="#" class="fa fa-instagram"></a></li>
 <li><a href="#" class="fa fa-facebook-square"></a></li>
@@ -335,7 +338,7 @@ Days til ready
 </div>
 </div>
 <div class="copyright">
-<p>2017 &copy; Craft Beer Nation / <a href="../../index.html">Web design by Klever media</a></p>
+<p>2020 &copy; Invisible Man Brewing / <a href="../../index.html">Digital by Justice Conder</a></p>
 </div>
 </div>
 </footer>
