--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Craft Beer Nation - Craft Beer HTML Template</title>
+<title>Invisible Man Brewing</title>
 <link rel="icon" type="image/png" href="images/favicon.png.html" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/fakeLoader.css" rel="stylesheet">
@@ -37,7 +37,8 @@
 <li><a href="#" class="fa fa-twitter-square"></a></li>
 </ul>
 </div>
-<div class="col-sm-8">
+
+<!-- <div class="col-sm-8">
 <div class="finder">
 <a href="#">
 <span class="fa fa-map-marker"></span> Find our beer
@@ -48,14 +49,15 @@
 <span class="fa fa-shopping-cart"></span> Empty
 </a>
 </div>
-</div>
+</div> -->
+
 </div>
 </div>
 </div>
 <div class="container">
 <div class="navbar-header">
-<a href="index.html" class="logo" title="Craft beer landing page">
-<img src="images/logo.png" alt="Craft Beer HTML Template">
+<a href="index.html" class="logo" title="Invisible Man Brewing">
+<img src="images/logo.png" alt="Invisible Man Brewing">
 </a>
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 <span class="sr-only">Toggle navigation</span>
@@ -71,7 +73,7 @@
 <a href="index.html">Home</a>
 </span>
 </li>
-<li>
+<!-- <li>
 <span>
 <a href="shop.html">Shop</a>
 </span>
@@ -85,7 +87,7 @@
 <li><a href="our-beer.html">BraveHeart</a></li>
 <li><a href="our-beer.html">The Drunk Indian</a></li>
 </ul>
-</li>
+</li> -->
 <li>
 <span>
 <a href="our-story.html">Our story</a>
@@ -96,14 +98,14 @@
 <a href="contact.html">Contact</a>
 </span>
 </li>
-<li class="dropdown">
+<!-- <li class="dropdown">
 <span>
 <a href="blog.html">Blog</a>
 </span>
 <ul class="dropdown-menu">
 <li><a href="blog-single.html">Single post</a></li>
 </ul>
-</li>
+</li> -->
 </ul>
 </div>
 </div>
@@ -124,19 +126,19 @@
 <div class="container-fluid dark section no-padding">
 <div class="row">
 <div class="col-sm-3 col-xs-6 icon-grid">
-<a href="https://www.facebook.com/klevermediauk"></a>
+<a href="#"></a>
 <i class="fa fa-facebook"></i>
 <h4>Facebook</h4>
 <p>Like our Facebook page for awesome deals &amp; new arrivals.</p>
 </div>
 <div class="col-sm-3 col-xs-6 icon-grid">
-<a href="https://www.instagram.com/klevermediauk"></a>
+<a href="#"></a>
 <i class="fa fa-instagram"></i>
 <h4>Instagram</h4>
 <p>Hashtag <a href="#">#craftbeernation</a> to be in with a chance to win freebies.</p>
 </div>
 <div class="col-sm-3 col-xs-6 icon-grid">
-<a href="https://www.twitter.com/klevermediauk"></a>
+<a href="#"></a>
 <i class="fa fa-twitter"></i>
 <h4>Twitter</h4>
 <p>Follow us on Twitter for all the latest in craft beer brewing.</p>
@@ -177,21 +179,22 @@
 <i class="fa fa-location-arrow"></i>
 <div>
 Address
-<span>94 River Road, London, United Kingdom</span>
+<span>132 S. Pennsylvania Ave Greensburg, PA 15601</span>
 </div>
 </li>
 <li>
 <i class="fa fa-envelope"></i>
 <div>
 Email
-<span><a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="b1c2d0ddd4c2f1d2c3d0d7c5d3d4d4c39cdfd0c5d8dedf9fd2dedc">[email&#160;protected]</a></span>
+<span>InvisibleManBrewing@yahoo.com</span>
+<!-- <span><a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="b1c2d0ddd4c2f1d2c3d0d7c5d3d4d4c39cdfd0c5d8dedf9fd2dedc">[email&#160;protected]</a></span> -->
 </div>
 </li>
 <li>
 <i class="fa fa-phone"></i>
 <div>
 Telephone
-<span>(0)203 123 4567</span>
+<span>724-454-4600</span>
 </div>
 </li>
 </ul>
@@ -218,9 +221,9 @@ Telephone
 <h6>Useful</h6>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="shop.html">Shop</a></li>
+<!-- <li><a href="shop.html">Shop</a></li> -->
 <li><a href="our-story.html">Our story</a></li>
-<li><a href="blog.html">Blog</a></li>
+<!-- <li><a href="blog.html">Blog</a></li> -->
 <li><a href="#">Login</a></li>
 </ul>
 </div>
@@ -228,8 +231,8 @@ Telephone
 <h6>Help</h6>
 <ul>
 <li><a href="#">Customer service</a></li>
-<li><a href="#">Find our beer</a></li>
-<li><a href="#">Recent orders</a></li>
+<!-- <li><a href="#">Find our beer</a></li>
+<li><a href="#">Recent orders</a></li> -->
 <li><a href="#">Contact</a></li>
 <li><a href="#">Terms &amp; Privacy</a></li>
 </ul>
@@ -245,9 +248,10 @@ Telephone
 </div>
 <div class="col-sm-5 col-sm-push-1">
 <h6>Our information</h6>
-<p><i class="fa fa-map-marker"></i> 94 River Road, London, United Kingdom</p>
-<p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="d1a2b0bdb4a291b2a3b0b7a5b3b4b4a3fcbfb0a5b8bebfffb2bebc">[email&#160;protected]</a></p>
-<p><i class="fa fa-phone"></i> (0)203 123 4567</p>
+<p><i class="fa fa-map-marker"></i> 132 S. Pennsylvania Ave Greensburg, PA 15601</p>
+<p><i class="fa fa-envelope-o"></i> InvisibleManBrewing@yahoo.com</p>
+<!-- <p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="d1a2b0bdb4a291b2a3b0b7a5b3b4b4a3fcbfb0a5b8bebfffb2bebc">[email&#160;protected]</a></p> -->
+<p><i class="fa fa-phone"></i> 724-454-4600</p>
 <ul class="social">
 <li><a href="#" class="fa fa-instagram"></a></li>
 <li><a href="#" class="fa fa-facebook-square"></a></li>
@@ -256,7 +260,7 @@ Telephone
 </div>
 </div>
 <div class="copyright">
-<p>2017 &copy; Craft Beer Nation / <a href="../../index.html">Web design by Klever media</a></p>
+<p>2020 &copy; Invisible Man Brewing / <a href="../../index.html">Digital by Justice Conder</a></p>
 </div>
 </div>
 </footer>
