Social and ico updates

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Invisible Man Brewing</title>
-<link rel="icon" type="image/png" href="images/favicon.png.html" />
+<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/fakeLoader.css" rel="stylesheet">
 <link href="css/owl-carousel.min.css" rel="stylesheet">
@@ -32,9 +32,9 @@
 <div class="row">
 <div class="col-sm-4 hidden-xs">
 <ul class="social">
-<li><a href="#" class="fa fa-instagram"></a></li>
-<li><a href="#" class="fa fa-facebook-square"></a></li>
-<li><a href="#" class="fa fa-twitter-square"></a></li>
+  <li><a href="https://www.instagram.com/invisiblemanbrew/" class="fa fa-instagram" target="_blank"></a></li>
+  <li><a href="https://www.facebook.com/invisiblemanbrewing/" class="fa fa-facebook-square" target="_blank"></a></li>
+  <li><a href="https://twitter.com/invisiblemanbc/" class="fa fa-twitter-square" target="_blank"></a></li>
 </ul>
 </div>
 
@@ -253,14 +253,14 @@ Telephone
 <!-- <p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="d1a2b0bdb4a291b2a3b0b7a5b3b4b4a3fcbfb0a5b8bebfffb2bebc">[email&#160;protected]</a></p> -->
 <p><i class="fa fa-phone"></i> 724-454-4600</p>
 <ul class="social">
-<li><a href="#" class="fa fa-instagram"></a></li>
-<li><a href="#" class="fa fa-facebook-square"></a></li>
-<li><a href="#" class="fa fa-twitter-square"></a></li>
+  <li><a href="https://www.instagram.com/invisiblemanbrew/" class="fa fa-instagram" target="_blank"></a></li>
+  <li><a href="https://www.facebook.com/invisiblemanbrewing/" class="fa fa-facebook-square" target="_blank"></a></li>
+  <li><a href="https://twitter.com/invisiblemanbc/" class="fa fa-twitter-square" target="_blank"></a></li>
 </ul>
 </div>
 </div>
 <div class="copyright">
-<p>2020 &copy; Invisible Man Brewing / <a href="../../index.html">Digital by Justice Conder</a></p>
+<p>2020 &copy; Invisible Man Brewing / <a href="http://justiceconder.com/" target="_blank">Digital by Justice Conder</a></p>
 </div>
 </div>
 </footer>
