--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Invisible Man Brewing</title>
-<link rel="icon" type="image/png" href="images/favicon.png.html" />
+<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/fakeLoader.css" rel="stylesheet">
 <link href="css/owl-carousel.min.css" rel="stylesheet">
@@ -32,9 +32,9 @@
 <div class="row">
 <div class="col-sm-4 hidden-xs">
 <ul class="social">
-<li><a href="#" class="fa fa-instagram"></a></li>
-<li><a href="#" class="fa fa-facebook-square"></a></li>
-<li><a href="#" class="fa fa-twitter-square"></a></li>
+<li><a href="https://www.instagram.com/invisiblemanbrew/" class="fa fa-instagram" target="_blank"></a></li>
+<li><a href="https://www.facebook.com/invisiblemanbrewing/" class="fa fa-facebook-square" target="_blank"></a></li>
+<li><a href="https://twitter.com/invisiblemanbc/" class="fa fa-twitter-square" target="_blank"></a></li>
 </ul>
 </div>
 
@@ -422,18 +422,19 @@ Days til ready
 <div class="col-sm-5 col-sm-push-1">
 <h6>Our information</h6>
 <p><i class="fa fa-map-marker"></i> 132 S. Pennsylvania Ave Greensburg, PA 15601</p>
-<p><i class="fa fa-envelope-o"></i> InvisibleManBrewing@yahoo.com</p>
+<p><i class="fa fa-envelope-o"></i> <a href="mailto:invisiblemanbrewing@yahoo.com" target="_blank" rel="noopener noreferrer">InvisibleManBrewing@yahoo.com</a></p>
+
 <!-- <p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="a5d6c4c9c0d6e5c6d7c4c3d1c7c0c0d788cbc4d1cccacb8bc6cac8">[email&#160;protected]</a></p> -->
 <p><i class="fa fa-phone"></i> 724-454-4600</p>
 <ul class="social">
-<li><a href="#" class="fa fa-instagram"></a></li>
-<li><a href="#" class="fa fa-facebook-square"></a></li>
-<li><a href="#" class="fa fa-twitter-square"></a></li>
+  <li><a href="https://www.instagram.com/invisiblemanbrew/" class="fa fa-instagram" target="_blank"></a></li>
+  <li><a href="https://www.facebook.com/invisiblemanbrewing/" class="fa fa-facebook-square" target="_blank"></a></li>
+  <li><a href="https://twitter.com/invisiblemanbc/" class="fa fa-twitter-square" target="_blank"></a></li>
 </ul>
 </div>
 </div>
 <div class="copyright">
-<p>2020 &copy; Invisible Man Brewing / <a href="../../index.html">Digital by Justice Conder</a></p>
+<p>2020 &copy; Invisible Man Brewing / <a href="http://justiceconder.com/" target="_blank">Digital by Justice Conder</a></p>
 </div>
 </div>
 </footer>
