map and form fix

--- a/contact.html
+++ b/contact.html
@@ -125,37 +125,46 @@
 
 <div class="container-fluid dark section no-padding">
 <div class="row">
-<div class="col-sm-3 col-xs-6 icon-grid">
-<a href="#"></a>
+
+<div class="col-sm-4 col-xs-12 icon-grid">
+<a href="https://www.facebook.com/invisiblemanbrewing/"></a>
 <i class="fa fa-facebook"></i>
 <h4>Facebook</h4>
 <p>Like our Facebook page for awesome deals &amp; new arrivals.</p>
 </div>
-<div class="col-sm-3 col-xs-6 icon-grid">
-<a href="#"></a>
+
+<div class="col-sm-4 col-xs-12 icon-grid">
+<a href="https://www.instagram.com/invisiblemanbrew/"></a>
 <i class="fa fa-instagram"></i>
 <h4>Instagram</h4>
-<p>Hashtag <a href="#">#craftbeernation</a> to be in with a chance to win freebies.</p>
+<p>Hashtag <a href="#">#invisiblemanbrewing</a> to get your pictures highlighted.</p>
 </div>
-<div class="col-sm-3 col-xs-6 icon-grid">
-<a href="#"></a>
+
+<div class="col-sm-4 col-xs-12 icon-grid">
+<a href="https://twitter.com/invisiblemanbc/"></a>
 <i class="fa fa-twitter"></i>
 <h4>Twitter</h4>
 <p>Follow us on Twitter for all the latest in craft beer brewing.</p>
 </div>
-<div class="col-sm-3 col-xs-6 icon-grid">
+
+<!-- <div class="col-sm-3 col-xs-6 icon-grid">
 <a href="#"></a>
 <i class="fa fa-google-plus"></i>
 <h4>Google +</h4>
 <p>Like is on Google + for the latest &amp; greatest in craft beer.</p>
-</div>
+</div> -->
+
 </div>
 </div>
 
 <div class="container-fluid light no-padding section">
 <div class="row">
 <div class="col-sm-6 matchHeight">
-<div id="map"></div>
+
+  <div id="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3042.8412399524927!2d-79.54731834869946!3d40.301483879277605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834d193452fd819%3A0x2f65ca91cf5c8111!2sInvisible%20Man%20Brewing!5e0!3m2!1sen!2sus!4v1584839295420!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+
 </div>
 <div class="col-sm-6 matchHeight">
 <section class="alignMiddle padding-80 mobile-center">
@@ -186,7 +195,8 @@ Address
 <i class="fa fa-envelope"></i>
 <div>
 Email
-<span>InvisibleManBrewing@yahoo.com</span>
+<span><a href="mailto:invisiblemanbrewing@yahoo.com" target="_blank" rel="noopener noreferrer">InvisibleManBrewing@yahoo.com</a></span>
+
 <!-- <span><a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="b1c2d0ddd4c2f1d2c3d0d7c5d3d4d4c39cdfd0c5d8dedf9fd2dedc">[email&#160;protected]</a></span> -->
 </div>
 </li>
@@ -202,7 +212,7 @@ Telephone
 </div>
 <div class="col-sm-5 col-sm-push-1 matchHeight">
 <section class="alignMiddle padding-80-0">
-<form action="https://formspree.io/your@email.com" method="POST" class=" scrollme animateme" data-when="enter" data-from="1" data-to="0" data-opacity="0" data-scale="1.1">
+<form action="#" method="POST" data-netlify="true" class=" scrollme animateme" data-when="enter" data-from="1" data-to="0" data-opacity="0" data-scale="1.1">
 <input type="text" name="name" placeholder="Name">
 <input type="email" name="_replyto" placeholder="Email">
 <textarea name="message" placeholder="Message" rows="5"></textarea>
@@ -249,7 +259,8 @@ Telephone
 <div class="col-sm-5 col-sm-push-1">
 <h6>Our information</h6>
 <p><i class="fa fa-map-marker"></i> 132 S. Pennsylvania Ave Greensburg, PA 15601</p>
-<p><i class="fa fa-envelope-o"></i> InvisibleManBrewing@yahoo.com</p>
+<p><i class="fa fa-envelope-o"></i> <a href="mailto:invisiblemanbrewing@yahoo.com" target="_blank" rel="noopener noreferrer">InvisibleManBrewing@yahoo.com</a></p>
+
 <!-- <p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="d1a2b0bdb4a291b2a3b0b7a5b3b4b4a3fcbfb0a5b8bebfffb2bebc">[email&#160;protected]</a></p> -->
 <p><i class="fa fa-phone"></i> 724-454-4600</p>
 <ul class="social">
@@ -277,7 +288,9 @@ Telephone
 <script src="js/fakeLoader.min.js"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/owl.autoplay.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzbEe1YItOGVa3h_gT66MTFP056M0xQyo"></script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9oAFKb-SqlgSjarGcwFfn32jn7I444Gg"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzbEe1YItOGVa3h_gT66MTFP056M0xQyo"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gmap3/6.1.0/gmap3.min.js"></script>
 <script src="https://use.fontawesome.com/4dfd2d448a.js"></script>
 <script src="js/custom.js"></script>
