--- a/our-story.html
+++ b/our-story.html
@@ -327,7 +327,8 @@ Days til ready
 <div class="col-sm-5 col-sm-push-1">
 <h6>Our information</h6>
 <p><i class="fa fa-map-marker"></i> 132 S. Pennsylvania Ave Greensburg, PA 15601</p>
-<p><i class="fa fa-envelope-o"></i> InvisibleManBrewing@yahoo.com</p>
+<p><i class="fa fa-envelope-o"></i> <a href="mailto:invisiblemanbrewing@yahoo.com" target="_blank" rel="noopener noreferrer">InvisibleManBrewing@yahoo.com</a></p>
+
 <!-- <p><i class="fa fa-envelope-o"></i> <a href="../../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="dba8bab7bea89bb8a9babdafb9bebea9f6b5baafb2b4b5f5b8b4b6">[email&#160;protected]</a></p> -->
 <p><i class="fa fa-phone"></i> 724-454-4600</p>
 <ul class="social">
